<resources>
    <string name="app_name">Fi Tunis</string>
    <string name="bestpicks">Best Picks For You</string>
    <string name="states">States</string>
    <string name="monuments">Monuments</string>
    <string name="accommodations">Accommodations</string>
    <string name="randompics">Random Pics</string>
    <string name="search">Search</string>
    <string name="restaurants">Restaurants</string>
    <string name="discovermore">Discover More</string>
</resources>